new tests added

--- a/Project2_2/Debug/Makefile
+++ b/Project2_2/Debug/Makefile
@@ -33,6 +33,8 @@ LINKER_SCRIPT_DEP:=
 
 # Every subdirectory with source files must be described here
 SUBDIRS :=  \
+../Debug/ \
+../Debug/tests/ \
 ../tests/
 
 
@@ -41,6 +43,10 @@ C_SRCS +=  \
 ../a_main.c \
 ../os.c \
 ../queue.c \
+../tests/TEST_periodic_task_scheduling.c \
+../tests/TEST_priority.c \
+../tests/TEST_rr_task_scheduling.c \
+../tests/TEST_system_task_scheduling.c \
 ../tests/TEST_too_many_tasks.c \
 ../uart.c
 
@@ -57,6 +63,10 @@ cswitch.o \
 a_main.o \
 os.o \
 queue.o \
+tests/TEST_periodic_task_scheduling.o \
+tests/TEST_priority.o \
+tests/TEST_rr_task_scheduling.o \
+tests/TEST_system_task_scheduling.o \
 tests/TEST_too_many_tasks.o \
 uart.o
 
@@ -65,6 +75,10 @@ cswitch.o \
 a_main.o \
 os.o \
 queue.o \
+tests/TEST_periodic_task_scheduling.o \
+tests/TEST_priority.o \
+tests/TEST_rr_task_scheduling.o \
+tests/TEST_system_task_scheduling.o \
 tests/TEST_too_many_tasks.o \
 uart.o
 
@@ -73,6 +87,10 @@ cswitch.d \
 a_main.d \
 os.d \
 queue.d \
+tests/TEST_periodic_task_scheduling.d \
+tests/TEST_priority.d \
+tests/TEST_rr_task_scheduling.d \
+tests/TEST_system_task_scheduling.d \
 tests/TEST_too_many_tasks.d \
 uart.d
 
@@ -81,6 +99,10 @@ cswitch.d \
 a_main.d \
 os.d \
 queue.d \
+tests/TEST_periodic_task_scheduling.d \
+tests/TEST_priority.d \
+tests/TEST_rr_task_scheduling.d \
+tests/TEST_system_task_scheduling.d \
 tests/TEST_too_many_tasks.d \
 uart.d
 
@@ -98,6 +120,14 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
+
+
+
+
+
+
 
 
 
