more tests added

--- a/Project2_2/Debug/Makefile
+++ b/Project2_2/Debug/Makefile
@@ -43,10 +43,13 @@ C_SRCS +=  \
 ../a_main.c \
 ../os.c \
 ../queue.c \
+../tests/TEST_periodic_task_overlap.c \
 ../tests/TEST_periodic_task_scheduling.c \
+../tests/TEST_periodic_task_timing.c \
 ../tests/TEST_priority.c \
 ../tests/TEST_rr_task_scheduling.c \
 ../tests/TEST_system_task_scheduling.c \
+../tests/TEST_Task_Next.c \
 ../tests/TEST_too_many_tasks.c \
 ../uart.c
 
@@ -63,10 +66,13 @@ cswitch.o \
 a_main.o \
 os.o \
 queue.o \
+tests/TEST_periodic_task_overlap.o \
 tests/TEST_periodic_task_scheduling.o \
+tests/TEST_periodic_task_timing.o \
 tests/TEST_priority.o \
 tests/TEST_rr_task_scheduling.o \
 tests/TEST_system_task_scheduling.o \
+tests/TEST_Task_Next.o \
 tests/TEST_too_many_tasks.o \
 uart.o
 
@@ -75,10 +81,13 @@ cswitch.o \
 a_main.o \
 os.o \
 queue.o \
+tests/TEST_periodic_task_overlap.o \
 tests/TEST_periodic_task_scheduling.o \
+tests/TEST_periodic_task_timing.o \
 tests/TEST_priority.o \
 tests/TEST_rr_task_scheduling.o \
 tests/TEST_system_task_scheduling.o \
+tests/TEST_Task_Next.o \
 tests/TEST_too_many_tasks.o \
 uart.o
 
@@ -87,10 +96,13 @@ cswitch.d \
 a_main.d \
 os.d \
 queue.d \
+tests/TEST_periodic_task_overlap.d \
 tests/TEST_periodic_task_scheduling.d \
+tests/TEST_periodic_task_timing.d \
 tests/TEST_priority.d \
 tests/TEST_rr_task_scheduling.d \
 tests/TEST_system_task_scheduling.d \
+tests/TEST_Task_Next.d \
 tests/TEST_too_many_tasks.d \
 uart.d
 
@@ -99,10 +111,13 @@ cswitch.d \
 a_main.d \
 os.d \
 queue.d \
+tests/TEST_periodic_task_overlap.d \
 tests/TEST_periodic_task_scheduling.d \
+tests/TEST_periodic_task_timing.d \
 tests/TEST_priority.d \
 tests/TEST_rr_task_scheduling.d \
 tests/TEST_system_task_scheduling.d \
+tests/TEST_Task_Next.d \
 tests/TEST_too_many_tasks.d \
 uart.d
 
@@ -120,6 +135,12 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
+
+
+
+
 
 
 
